objects/Relationship__c.object
<CustomObject>
    <description>This table enables relationships to be built between two people or companies</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Relationships (Account)</relationshipLabel>
        <relationshipName>Relationships2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <description>Shows the Company of the Contact if it&apos;s not a Person Account</description>
        <formula>IF( ! Contact__r.IsPersonAccount ,Contact__r.Account.Name, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Company Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Person/Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Relationships</relationshipLabel>
        <relationshipName>Relationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Display_Sort_Order__c</fullName>
        <description>This field is designed to sort &quot;Same Person&apos; relationships to the top of the sort order in related lists and then sort by tier</description>
        <formula>IF(ISPICKVAL(Relationship_Type__c, &quot;Same Person&quot;), 9, 0) +
IF(ISPICKVAL(Relationship_Type__c, &quot;Shared Order&quot;), 8, 0) +
IF(Contact__r.Tier_Name__c = &quot;Top Tier&quot;, 4, 0) +
IF(Contact__r.Tier_Name__c = &quot;Tier 2&quot;, 3, 0) + 
IF(Contact__r.Tier_Name__c = &quot;Tier 3&quot;, 2, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Display Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Invalid_Relationship__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Invalid Relationship</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Related_Account_or_Person__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Person accounts also have account record, so all lookups can be driven from the account level
2 records stored per relationship (see note in question section below)</description>
        <label>Related Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Relationships (Related Account or Person)</relationshipLabel>
        <relationshipName>Relationships1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Company_Name__c</fullName>
        <description>If the account is not a person account, show the account name.</description>
        <formula>IF( !Related_Contact__r.IsPersonAccount ,  Related_Contact__r.Account.Name , &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Related Company Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Contact_Lifetime_Value__c</fullName>
        <formula>IF(Related_Contact__r.IsPersonAccount, Related_Contact__r.Total_Personal_Lifetime_Value__c, Related_Contact__r.Total_Business_Contact_Lifetime_Value__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Related Contact Lifetime Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Related_Contact_Tier__c</fullName>
        <formula>Related_Contact__r.Tier_Display__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Related Contact Tier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Person/Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Relationships (Related Contact)</relationshipLabel>
        <relationshipName>Relationships1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Relationship_Description__c</fullName>
        <label>Relationship Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relationship_End_Date__c</fullName>
        <label>Relationship End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Relationship_Type__c</fullName>
        <label>Relationship Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Same Person</fullName>
                </value>
                <value>
                    <fullName>Shared Order</fullName>
                </value>
                <value>
                    <fullName>Spouse/Partner</fullName>
                </value>
                <value>
                    <fullName>Family/Household Member</fullName>
                </value>
                <value>
                    <fullName>Designer</fullName>
                </value>
                <value>
                    <fullName>Friend</fullName>
                </value>
                <value>
                    <fullName>Employee</fullName>
                </value>
                <value>
                    <fullName>RH Designer</fullName>
                </value>
                <value>
                    <fullName>RH Employee Contact</fullName>
                </value>
                <value>
                    <fullName>Client</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reversed_Relationship_Link__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reversed Relationship Link</label>
        <referenceTo>Relationship__c</referenceTo>
        <relationshipLabel>Relationships</relationshipLabel>
        <relationshipName>Relationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Relationship</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>Related_Account_or_Person__c</columns>
        <columns>Related_Contact__c</columns>
        <columns>Relationship_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>R-{00000}</displayFormat>
        <label>Relationship ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Relationships</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>